# portolan-cli

./: .gitattributes  .gitignore  .mutation-baseline  .pip-audit-ignores  .pre-commit-config.yaml  .pre-commit-config.yml  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md  SKILL.md  catalog.json  codecov.yml  mkdocs.yml  prek.toml  pyproject.toml  versions.json  vulture_whitelist.py
.claude/: settings.json
.claude/hooks/: post-bash-remind.sh  post-read-inject-docs.sh  pre-read-check.sh  prompt-inject.sh
.claude/rules/: architecture.md  ci-and-release.md  cli-and-output.md  conversion-and-visualization.md  documentation.md  python.md  scan-check.md  stac-assets.md  sync.md  testing.md
.claude/skills/: menard-audit.md
.docsync/: donttouch  import_graph.json  import_graph.state  links.toml
.github/: CODEOWNERS  CONTEXT_GUIDE.md  SOCIAL_PREVIEW.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  docs.yml  e2e.yml  nightly.yml  publish.yml  release.yml  security-audit.yml  sync-schemas-to-spec.yml  sync-skills.yml  sync-spec.yml  tests.yml
.menard/: donttouch  links.toml
.portolan/: config.yaml
.scope/: sync-workflow-foundations.md  sync-workflow.md
.specify/memory/: constitution.md
context/: architecture.md
docs/: .cli-snapshot.json  BRANDING.md  agent-native.md  contributing.md  index.md  roadmap.md
docs/guides/: extract-arcgis.md  extract-wfs.md  iceberg.md  merge-strategies.md  metadata-defaults.md  nested-catalogs.md  partitioning.md  skills.md  version-management.md
docs/plans/: 2025-02-06-ci-workflow-fixes-design.md  2025-02-06-v0.4-metadata-validation.md  2025-02-08-gitingest-auto-fetch-design.md  2025-02-11-directory-import-design.md  scan-false-positives-fixes.md
docs/reference/: cli.md  configuration.md  formats.md
docs/tutorials/: end-to-end.md
portolan_cli/: __init__.py  add.py  add_progress.py  agents_md.py  async_utils.py  bbox.py  catalog.py  catalog_list.py  catalog_versions.py  check.py  clean.py  cli.py  collection.py  collection_id.py  config.py  constants.py  conversion_config.py  convert.py  crs.py  dataset.py  discovery.py  download.py  emit.py  errors.py  extension_registry.py  external.py  finalization.py  formats.py  inspect.py  item.py  json_output.py  metadata_extraction.py  metadata_seeding.py  metadata_yaml.py  output.py  parallel.py  partitioning.py  pmtiles.py  pmtiles_links.py  preparation.py  (+26 more)
portolan_cli/backends/: __init__.py  json_file.py  protocol.py
portolan_cli/extract/: __init__.py
portolan_cli/metadata/: __init__.py  cog.py  detection.py  fix.py  flatgeobuf.py  geoparquet.py  models.py  pmtiles.py  scan.py  statistics.py  update.py  validation.py
portolan_cli/models/: __init__.py  _stac_version.py  catalog.py  collection.py  item.py  schema.py  version.py
portolan_cli/scan/: __init__.py  check.py  core.py  detect.py  fix.py  infer.py  output.py  progress.py
portolan_cli/schema/: __init__.py  breaking.py  export.py  import_.py
portolan_cli/skills/: INSTALL.md  __init__.py  bootstrap.md  consume.md  sourcecoop.md
portolan_cli/sync/: __init__.py  checksums.py  core.py  download.py  pull.py  push.py  upload.py  upload_progress.py
portolan_cli/validation/: __init__.py  input_hardening.py  results.py  rules.py  runner.py  schema_registry.py  stac_rules.py
portolan_cli/viz/: __init__.py  pmtiles.py  pmtiles_links.py  thumbnail.py
scripts/: apply_branch_protection.sh  fetch_lib_docs.py  generate_claude_md_sections.py  generate_skill_md.py  mutation_score.py  orchestrate-issue.sh  pip_audit_ignores.py  refresh_stac_schemas.py  sync_skills_readme.py  sync_sourcecoop_skill.py  update_freshness.py  validate_claude_md.py  validate_cli_docs.py  validate_quickstart.py  validate_skill_md.py
spec/: README.md  ai-integration.md  best-practices.md  core.md  extensions.md  structure.md  versions.md
spec/examples/: README.md  access-collection.json  authentication-collection.json  tabular-collection.json
spec/extensions/: access.md  authentication.md
spec/formats/: pointcloud.md  raster.md  tabular.md  vector.md
spec/schema/: README.md  catalog-versions.schema.json  catalog.schema.json  collection.schema.json  rules.yaml  spec-version.json  versions.schema.json
specs/002-cloud-native-warnings/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: conftest.py  test_placeholder.py
tests/benchmark/: __init__.py  test_batch_versioning_benchmark.py  test_catalog_benchmark.py  test_conversion_benchmark.py  test_format_detection_benchmark.py  test_metadata_benchmark.py  test_scan_performance.py  test_validation_benchmark.py
tests/docs/: __init__.py  conftest.py  test_readme_examples.py
tests/fixtures/: README.md  generate.py  simple.parquet
tests/integration/: test_add_catalog_root_integration.py  test_add_cloud_native_vectors.py  test_add_file_size.py  test_add_hive_partitions.py  test_add_incremental_accounting.py  test_add_integration.py  test_add_merge_strategy.py  test_add_multilayer_integration.py  test_add_no_duplicate_nesting.py  test_add_rm_integration.py  test_add_warnings.py  test_add_with_defaults.py  test_bbox_validation.py  test_catalog_root_consistency.py  test_check_command.py  test_check_conversion_config.py  test_check_remove_legacy.py  test_clean_integration.py  test_cli_json.py  test_cli_progress.py  test_clone_ergonomics_integration.py  test_cog_reoptimize.py  test_collection_level_asset_workflow.py  test_concurrency_enforcement.py  test_config_command.py  test_convert_workflow.py  test_crs_change_detection.py  test_dataset_integration.py  test_dataset_warnings.py  test_dotted_path_regression.py  test_download_integration.py  test_fetch_lib_docs_integration.py  test_gpio_integration.py  test_info_dot_integration.py  test_init_command.py  test_init_v2.py  test_list_cli.py  test_list_status_integration.py  test_mandatory_titles_add.py  test_metadata_scan_unification.py  (+27 more)
tests/network/: __init__.py  (+1 more)
(+588 files in other folders)
